--- a/N03_QTCSDLHD_Agoda/GUI/XemChiTietChuyenBay.xaml
+++ b/N03_QTCSDLHD_Agoda/GUI/XemChiTietChuyenBay.xaml
@@ -8,12 +8,12 @@
         Title="XemChiTietChuyenBay" Height="450" Width="800">
     <Grid>
         <Label Content="THÔNG TIN CHUYẾN BAY" HorizontalAlignment="Left" Margin="25,10,0,0" VerticalAlignment="Top" Height="33" Width="264" FontFamily="Bold" FontSize="15" FontWeight="Bold" Foreground="Red"/>
-        <Label Content="THÔNG TIN CHI TIẾT" HorizontalAlignment="Left" Margin="25,156,0,0" VerticalAlignment="Top" Height="33" Width="264" FontFamily="Bold" FontSize="15" FontWeight="Bold" Foreground="Red"/>
-        <Label Content="ĐIỂM DỪNG" HorizontalAlignment="Left" Margin="592,151,0,0" VerticalAlignment="Top" Height="33" Width="102" FontFamily="Bold" FontSize="15" FontWeight="Bold" Foreground="Red"/>
-        <Label Content="MÔ TẢ" HorizontalAlignment="Left" Margin="294,156,0,0" VerticalAlignment="Top" Height="33" Width="60" FontFamily="Bold" FontSize="15" FontWeight="Bold" Foreground="Red"/>
+        <Label Content="THÔNG TIN CHI TIẾT" HorizontalAlignment="Left" Margin="25,217,0,0" VerticalAlignment="Top" Height="33" Width="264" FontFamily="Bold" FontSize="15" FontWeight="Bold" Foreground="Red"/>
+        <Label Content="ĐIỂM DỪNG" HorizontalAlignment="Left" Margin="574,215,0,0" VerticalAlignment="Top" Height="33" Width="102" FontFamily="Bold" FontSize="15" FontWeight="Bold" Foreground="Red"/>
+        <Label Content="MÔ TẢ" HorizontalAlignment="Left" Margin="294,216,0,0" VerticalAlignment="Top" Height="33" Width="60" FontFamily="Bold" FontSize="15" FontWeight="Bold" Foreground="Red"/>
         <DataGrid x:Name="dgvThongTinChuyenBay" 
                   HorizontalAlignment="Center" 
-                  Height="103" Margin="0,48,0,0" 
+                  Height="162" Margin="0,48,0,0" 
                   VerticalAlignment="Top" 
                   Width="790" 
                   FontSize="16"
@@ -21,7 +21,7 @@
                   SelectionMode="Single"
                   SelectionUnit="FullRow"
                   IsReadOnly="True"
-                  AutoGenerateColumns="False">
+                  AutoGenerateColumns="False" SelectionChanged="dgvThongTinChuyenBay_SelectionChanged">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Hãng Hàng Không"
                                     Binding="{Binding hangHangKhong}"></DataGridTextColumn>
@@ -46,32 +46,32 @@
         <TextBox x:Name="tbChiTietChuyenBay"
                  HorizontalAlignment="Left"
                  Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                 Height="145"
+                 Height="134"
                  FontSize="14"
-                 Margin="25,194,0,0"
+                 Margin="25,255,0,0"
                  TextWrapping="Wrap"
                  VerticalAlignment="Top"
-                 Width="214" />
+                 Width="214"  />
         <TextBox x:Name="tbMoTa"
                  HorizontalAlignment="Center"
                  Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                 Height="145"
+                 Height="134"
                  FontSize="14"
-                 Margin="0,194,0,0"
+                 Margin="0,255,0,0"
                  TextWrapping="Wrap"
                  VerticalAlignment="Top"
                  Width="214
-                 " />
+                 "/>
         <TextBox x:Name="tbDiemDung"
                  HorizontalAlignment="Left"
                  Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                 Height="145"
+                 Height="134"
                  FontSize="14"
-                 Margin="569,194,0,0"
+                 Margin="569,255,0,0"
                  TextWrapping="Wrap"
                  VerticalAlignment="Top"
                  Width="214
-                 " />
-        <Button x:Name="btnQuayLai" Content="Quay Lại" HorizontalAlignment="Left" Margin="324,363,0,0" VerticalAlignment="Top" Width="100" Height="38" FontWeight="Bold"  Click="btnQuayLai_Click"/>
+                 "  />
+        <Button x:Name="btnQuayLai" Content="QUAY LẠI" HorizontalAlignment="Left" Margin="683,5,0,0" VerticalAlignment="Top" Width="100" Height="38" FontWeight="Bold"  Click="btnQuayLai_Click" Background="#FFE65B5B"/>
     </Grid>
 </Window>
