--- a/N03_QTCSDLHD_Agoda/GUI/XemChuyenBay.xaml
+++ b/N03_QTCSDLHD_Agoda/GUI/XemChuyenBay.xaml
@@ -6,10 +6,12 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:GUI"
         mc:Ignorable="d"
-        Title="XemChuyenBay" Height="450" Width="800">
+        Title="XemChuyenBay" Height="500" Width="1050"
+        ResizeMode="NoResize">
+
     <Grid>
-        <DockPanel Margin="0,0,669,0" Background="#FF627DD2" InputScope="RegularExpression">
-            <StackPanel Height="425">
+        <DockPanel Margin="0,0,924,0" Background="#FF627DD2" InputScope="RegularExpression">
+            <StackPanel Height="500">
                 <ToggleButton Style="{DynamicResource MaterialDesignHamburgerToggleButton}"
                                       IsChecked="False"
                                       x:Name="MenuToggleButton"
@@ -22,18 +24,15 @@
             </StackPanel>
         </DockPanel>
 
-        <Label Content="TÌM KIẾM CHUYẾN BAY" HorizontalAlignment="Left" Margin="450,31,0,0" VerticalAlignment="Top" Height="38" Width="300" FontFamily="Bold" FontSize="24" FontWeight="Bold" Foreground="Red"/>
-        <DataGrid x:Name="dgvChuyenBay" 
- 
-                  HorizontalAlignment="Stretch"
-                  Height="268" Margin="400,0,0,0" 
-                  VerticalAlignment="Center" 
-                  Width="400" 
+        <Label Content="TÌM KIẾM CHUYẾN BAY" HorizontalAlignment="Left" Margin="597,24,0,0" VerticalAlignment="Top" Height="38" Width="300" FontFamily="Bold" FontSize="24" FontWeight="Bold" Foreground="Red"/>
+        <DataGrid x:Name="dgvChuyenBay"
+                  Height="310" Margin="454,74,10,0" 
+                  VerticalAlignment="Top" 
                   FontSize="16"
                   CanUserAddRows="False"
                   SelectionUnit="FullRow"
                   IsReadOnly="True"
-                  AutoGenerateColumns="False" SelectionChanged="dgvChuyenBay_SelectionChanged">
+                  AutoGenerateColumns="False" SelectionChanged="dgvChuyenBay_SelectionChanged" Background="{DynamicResource MaterialDesignBackground}" RowBackground="#FFE8EDE0">
             <DataGrid.Columns>
                 <DataGridCheckBoxColumn Header="Chọn" IsReadOnly="False"/>
                 <DataGridTextColumn Header="Hãng Hàng Không"
@@ -63,15 +62,15 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <DatePicker x:Name="dataPicker_ngayDi" HorizontalAlignment="Left" Margin="259,138,0,0" VerticalAlignment="Top" Width="100" RenderTransformOrigin="0.5,2.718" />
-        <DatePicker x:Name="dataPicker_ngayVe" HorizontalAlignment="Left" Margin="258,187,0,0" Width="101" VerticalAlignment="Top" />
-        <TextBlock HorizontalAlignment="Left" Margin="149,140,0,0" TextWrapping="Wrap" Text="Ngày Đi" VerticalAlignment="Top" Height="23" Width="86" FontSize="14" RenderTransformOrigin="0.586,-0.242"/>
+        <DatePicker x:Name="dataPicker_ngayDi" HorizontalAlignment="Left" Margin="278,148,0,0" VerticalAlignment="Top" Width="127" RenderTransformOrigin="0.5,2.718" />
+        <DatePicker x:Name="dataPicker_ngayVe" HorizontalAlignment="Left" Margin="278,204,0,0" Width="127" VerticalAlignment="Top" />
+        <TextBlock HorizontalAlignment="Left" Margin="148,150,0,0" TextWrapping="Wrap" Text="Ngày Đi" VerticalAlignment="Top" Height="23" Width="86" FontSize="14" RenderTransformOrigin="0.586,-0.242"/>
         <TextBlock HorizontalAlignment="Left" Margin="148,96,0,0" TextWrapping="Wrap" Text="Hãng Hàng Không" VerticalAlignment="Top" Height="23" Width="125" FontSize="14" RenderTransformOrigin="0.586,-0.242"/>
-        <TextBlock x:Name="txtNgayVe"  Margin="149,189,565,0" TextWrapping="Wrap" Text="Ngày Về" VerticalAlignment="Top" Height="23" FontSize="14"/>
-        <TextBlock Margin="149,238,578,0" TextWrapping="Wrap" Text="Hạng Ghế" VerticalAlignment="Top" Height="21" FontSize="14"/>
-        <TextBlock Margin="148,289,527,0" TextWrapping="Wrap" Text="Điểm Xuất Phát" VerticalAlignment="Top" Height="23" FontSize="14"/>
-        <TextBlock Margin="149,332,551,0" TextWrapping="Wrap" Text="Điểm Đến" VerticalAlignment="Top" Height="28" FontSize="14"/>
-        <ComboBox x:Name="cb_HangGhe" HorizontalAlignment="Left" Margin="259,234,0,0" VerticalAlignment="Top" Width="101" RenderTransformOrigin="0.372,0.12" SelectionChanged="comboBox_HangGhe_SelectionChanged">
+        <TextBlock x:Name="txtNgayVe"  Margin="148,206,765,0" TextWrapping="Wrap" Text="Ngày Về" VerticalAlignment="Top" Height="23" FontSize="14"/>
+        <TextBlock Margin="149,259,578,0" TextWrapping="Wrap" Text="Hạng Ghế" VerticalAlignment="Top" Height="21" FontSize="14"/>
+        <TextBlock Margin="148,309,527,0" TextWrapping="Wrap" Text="Điểm Xuất Phát" VerticalAlignment="Top" Height="23" FontSize="14"/>
+        <TextBlock Margin="148,361,552,0" TextWrapping="Wrap" Text="Điểm Đến" VerticalAlignment="Top" Height="28" FontSize="14"/>
+        <ComboBox x:Name="cb_HangGhe" HorizontalAlignment="Left" Margin="278,253,0,0" VerticalAlignment="Top" Width="127" RenderTransformOrigin="0.372,0.12" SelectionChanged="comboBox_HangGhe_SelectionChanged">
             <ComboBoxItem Content="Phổ Thông"/>
             <ComboBoxItem Content="Phổ Thông Cao Cấp"/>
             <ComboBoxItem Content="Thương Gia"/>
@@ -79,18 +78,18 @@
             <ComboBoxItem Content=""/>
         </ComboBox>
 
-        <ComboBox x:Name="cb_diemXuatPhat" HorizontalAlignment="Left" Margin="278,279,0,0" VerticalAlignment="Top" Width="86" RenderTransformOrigin="0.372,0.12" SelectionChanged="comboBox_diemXuatPhat_SelectionChanged">
+        <ComboBox x:Name="cb_diemXuatPhat" HorizontalAlignment="Left" Margin="286,299,0,0" VerticalAlignment="Top" Width="119" RenderTransformOrigin="0.372,0.12" SelectionChanged="comboBox_diemXuatPhat_SelectionChanged">
         </ComboBox>
 
-        <ComboBox x:Name="cb_diemDen" HorizontalAlignment="Left" Margin="259,320,0,0" VerticalAlignment="Top" Width="101" RenderTransformOrigin="0.372,0.12" >
+        <ComboBox x:Name="cb_diemDen" HorizontalAlignment="Left" Margin="278,349,0,0" VerticalAlignment="Top" Width="127" RenderTransformOrigin="0.372,0.12" >
         </ComboBox>
 
-        <RadioButton Name="rbMotChieu" Content="Một Chiều" Margin="142,52,558,0" VerticalAlignment="Top" FontSize="14" Checked="rb_MotChieuChecked" RenderTransformOrigin="0.488,0.212" />
-        <RadioButton Name="rbKhuHoi" Content="Khứ Hồi" HorizontalAlignment="Left" Margin="278,52,0,0" VerticalAlignment="Top" FontSize="14" Checked="rbKhuHoi_Checked"/>
-        <Button x:Name="btnChonChuyenBay" Content="Chọn Chuyến Bay" HorizontalAlignment="Left" Margin="423,375,0,0" VerticalAlignment="Top" Width="147" Height="37" FontWeight="Bold"  RenderTransformOrigin="0.683,0.422" Click="btnChonChuyenBay_Click"/>
-        <Button x:Name="btnThemXeDayHang" Content="Thêm Vào Xe Đẩy Hàng" HorizontalAlignment="Left" Margin="598,375,0,0" VerticalAlignment="Top" Width="192" Height="37" FontWeight="Bold"  Click="btnThemXeDayHang_Click"/>
-        <Button x:Name="btnXemChiTiet" Content="Xem Chi Tiết" HorizontalAlignment="Left" Margin="278,375,0,0" VerticalAlignment="Top" Width="122" Height="37" FontWeight="Bold"  Click="btn_ChiTiet_Click"/>
-        <Button x:Name="btnTimKiem" Content="Tìm Kiếm" HorizontalAlignment="Left" Margin="150,375,0,0" VerticalAlignment="Top" Width="100" Height="38" FontWeight="Bold"  Click="btnTimKiem_Click"/>
-        <TextBox x:Name="tbHangHangKhong"  HorizontalAlignment="Left" Height="22" Margin="278,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="86" TextChanged="tbHangHangKhong_TextChanged"/>
+        <RadioButton Name="rbMotChieu" Content="Một Chiều" Margin="146,45,798,0" VerticalAlignment="Top" FontSize="14" Checked="rb_MotChieuChecked" RenderTransformOrigin="0.488,0.212" />
+        <RadioButton Name="rbKhuHoi" Content="Khứ Hồi" HorizontalAlignment="Left" Margin="286,45,0,0" VerticalAlignment="Top" FontSize="14" Checked="rbKhuHoi_Checked"/>
+        <Button x:Name="btnChonChuyenBay" Content="Chọn Chuyến Bay" HorizontalAlignment="Left" Margin="549,415,0,0" VerticalAlignment="Top" Width="148" Height="37" FontWeight="Bold"  RenderTransformOrigin="0.683,0.422" Click="btnChonChuyenBay_Click"/>
+        <Button x:Name="btnThemXeDayHang" Content="Thêm Vào Xe Đẩy Hàng" HorizontalAlignment="Left" Margin="794,415,0,0" VerticalAlignment="Top" Width="192" Height="37" FontWeight="Bold"  Click="btnThemXeDayHang_Click"/>
+        <Button x:Name="btnXemChiTiet" Content="Xem Chi Tiết" HorizontalAlignment="Left" Margin="327,415,0,0" VerticalAlignment="Top" Width="122" Height="37" FontWeight="Bold"  Click="btn_ChiTiet_Click"/>
+        <Button x:Name="btnTimKiem" Content="Tìm Kiếm" HorizontalAlignment="Left" Margin="149,415,0,0" VerticalAlignment="Top" Width="100" Height="38" FontWeight="Bold"  Click="btnTimKiem_Click"/>
+        <TextBox x:Name="tbHangHangKhong"  HorizontalAlignment="Left" Height="22" Margin="278,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="127" TextChanged="tbHangHangKhong_TextChanged"/>
     </Grid>
 </Window>
