Chức năng xem vé máy bay

--- a/N03_QTCSDLHD_Agoda/GUI/XemGioHang.xaml
+++ b/N03_QTCSDLHD_Agoda/GUI/XemGioHang.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GUI"
         mc:Ignorable="d"
-        Title="XemGioHang" Height="450" Width="800">
+        Title="XemGioHang" Height="450" Width="800"
+        ResizeMode="NoResize">
     <Grid>
         <Label Content="GIỎ HÀNG" HorizontalAlignment="Left" Margin="329,25,0,0" VerticalAlignment="Top" Height="38" Width="300" FontFamily="Bold" FontSize="24" FontWeight="Bold" Foreground="Red"/>
         <DataGrid x:Name="dgvGioHang"
@@ -23,8 +24,8 @@
                                     Binding="{Binding thongTinChuyenBay}"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="btn_DatVe"  Content="Đặt Vé Máy Bay" HorizontalAlignment="Left" Height="44" Margin="157,334,0,0" VerticalAlignment="Top" Width="132" Click="btn_DatVe_Click"/>
-        <Button x:Name="btn_QuayLai" Content="Quay Lại" HorizontalAlignment="Left" Height="44" Width="132" Margin="460,335,0,0" VerticalAlignment="Top" FontSize="14" Click="btn_QuayLai_Click"/>
+        <Button x:Name="btn_DatVe"  Content="Đặt Vé Máy Bay" HorizontalAlignment="Left" Height="44" Margin="227,335,0,0" VerticalAlignment="Top" Width="132" Click="btn_DatVe_Click"/>
+        <Button x:Name="btn_QuayLai" Content="Quay Lại" HorizontalAlignment="Left" Height="44" Width="132" Margin="413,335,0,0" VerticalAlignment="Top" FontSize="14" Click="btn_QuayLai_Click"/>
         
     </Grid>
 </Window>
